# PasswordManagerClient

./: .gitignore  CHANGES.md  openapi-python-client.yaml  pyproject.toml
app/: config.py  main.py  models.py  workers.py
app/client/: __init__.py  client.py  types.py
app/client/api/auth/: auth_test_api_auth_test_auth_get.py  revoke_login_token_api_auth_revoke_post.py  token_login_api_auth_token_post.py
app/client/api/groups/: change_entry_data_api_groups_group_id_entries_entry_id_patch.py  (+12 more)
app/client/models/: __init__.py  access_token_error.py  access_token_error_codes.py  access_token_response.py  body_revoke_login_token_api_auth_revoke_post.py  body_token_login_api_auth_token_post.py  entry_create.py  entry_public_get.py  entry_replace_data.py  entry_update.py  generic_success.py  group_create.py  group_move.py  group_public_children.py  group_public_get.py  group_public_modify.py  group_rename.py  http_validation_error.py  user_info_public.py  validation_error.py
app/controllers/: apps.py  data_helpers.py  entry_data.py  login_page.py
app/controllers/tabs/: databases.py  passwords.py  settings.py  sync_client.py
app/localdb/: __init__.py  database.py  dbtables.py  synced_db.py
app/models/: models.py  ui.py
app/serversync/: client.py  models.py
app/ui/: add_password_entry_dialog.py  add_password_group_dialog.py  edit_sync_info_dialog.py  main.py  password_entry_info_dialog.py
pyside6_ui/: add_password_entry_dialog.ui  add_password_group_dialog.ui  edit_sync_info_dialog.ui  main.ui  password_entry_info_dialog.ui
scripts/: generate-client.sh
(+1 files in other folders)
