[project]
name = "newguy103-passwordmanager-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "platformdirs>=4.3.8",
    "pydantic-settings>=2.9.1",
    "pyside6>=6.9.0",
    "python-dateutil>=2.9.0.post0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.31.2",
    "openapi-python-client>=0.24.3",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "S"]
ignore = ["S101", "B011", "E501", "UP046", "UP007", "S110", "W293"]
